vendor/linux/x64/ftd2xx.h


typedef PVOID	FT_HANDLE;
typedef ULONG	FT_STATUS;
	typedef struct ft_eeprom_header {
		FT_DEVICE deviceType;		
		WORD VendorId;				
		WORD ProductId;				
		UCHAR SerNumEnable;			
		WORD MaxPower;				
		UCHAR SelfPowered;			
		UCHAR RemoteWakeup;			
		UCHAR PullDownEnable;		
	} FT_EEPROM_HEADER, *PFT_EEPROM_HEADER;
	typedef struct ft_eeprom_2232h {
		FT_EEPROM_HEADER common;	
		UCHAR ALSlowSlew;			
		UCHAR ALSchmittInput;		
		UCHAR ALDriveCurrent;		
		UCHAR AHSlowSlew;			
		UCHAR AHSchmittInput;		
		UCHAR AHDriveCurrent;		
		UCHAR BLSlowSlew;			
		UCHAR BLSchmittInput;		
		UCHAR BLDriveCurrent;		
		UCHAR BHSlowSlew;			
		UCHAR BHSchmittInput;		
		UCHAR BHDriveCurrent;		
		UCHAR AIsFifo;				
		UCHAR AIsFifoTar;			
		UCHAR AIsFastSer;			
		UCHAR BIsFifo;				
		UCHAR BIsFifoTar;			
		UCHAR BIsFastSer;			
		UCHAR PowerSaveEnable;		
		UCHAR ADriverType;			
		UCHAR BDriverType;			
	} FT_EEPROM_2232H, *PFT_EEPROM_2232H;
	typedef struct ft_eeprom_4232h {
		FT_EEPROM_HEADER common;	
		UCHAR ASlowSlew;			
		UCHAR ASchmittInput;		
		UCHAR ADriveCurrent;		
		UCHAR BSlowSlew;			
		UCHAR BSchmittInput;		
		UCHAR BDriveCurrent;		
		UCHAR CSlowSlew;			
		UCHAR CSchmittInput;		
		UCHAR CDriveCurrent;		
		UCHAR DSlowSlew;			
		UCHAR DSchmittInput;		
		UCHAR DDriveCurrent;		
		UCHAR ARIIsTXDEN;			
		UCHAR BRIIsTXDEN;			
		UCHAR CRIIsTXDEN;			
		UCHAR DRIIsTXDEN;			
		UCHAR ADriverType;			
		UCHAR BDriverType;			
		UCHAR CDriverType;			
		UCHAR DDriverType;			
	} FT_EEPROM_4232H, *PFT_EEPROM_4232H;
	typedef struct ft_eeprom_232h {
		FT_EEPROM_HEADER common;	
		UCHAR ACSlowSlew;			
		UCHAR ACSchmittInput;		
		UCHAR ACDriveCurrent;		
		UCHAR ADSlowSlew;			
		UCHAR ADSchmittInput;		
		UCHAR ADDriveCurrent;		
		UCHAR Cbus0;				
		UCHAR Cbus1;				
		UCHAR Cbus2;				
		UCHAR Cbus3;				
		UCHAR Cbus4;				
		UCHAR Cbus5;				
		UCHAR Cbus6;				
		UCHAR Cbus7;				
		UCHAR Cbus8;				
		UCHAR Cbus9;				
		UCHAR FT1248Cpol;			
		UCHAR FT1248Lsb;			
		UCHAR FT1248FlowControl;	
		UCHAR IsFifo;				
		UCHAR IsFifoTar;			
		UCHAR IsFastSer;			
		UCHAR IsFT1248;			
		UCHAR PowerSaveEnable;		
		UCHAR DriverType;			
	} FT_EEPROM_232H, *PFT_EEPROM_232H;
	typedef struct ft_eeprom_PD_PDO_mv_ma {
		USHORT PDO1ma;	
		USHORT PDO1mv;	
		USHORT PDO2ma;	
		USHORT PDO2mv;	
		USHORT PDO3ma;	
		USHORT PDO3mv;	
		USHORT PDO4ma;	
		USHORT PDO4mv;	
		USHORT PDO5ma;	
		USHORT PDO5mv;	
		USHORT PDO6ma;	
		USHORT PDO6mv;	
		USHORT PDO7ma;	
		USHORT PDO7mv;	
	} FT_EEPROM_PD_PDO_mv_ma;
	typedef struct ft_eeprom_pd {
		UCHAR srprs;		
		UCHAR sraprs;		
		UCHAR srrprs;		
		UCHAR saprs;		
		UCHAR vconns;		
		UCHAR passthru;		
		UCHAR extmcu;		
		UCHAR pd2en;		
		UCHAR pd1autoclk;	
		UCHAR pd2autoclk;	
		UCHAR useefuse;		
		UCHAR extvconn;		
		UCHAR count;		
		UCHAR srcPin1;		
		UCHAR srcPin2;		
		UCHAR srcPin3;		
		UCHAR srcPin4;		
		UCHAR srcPin5;		
		UCHAR srcPin6;		
		UCHAR srcPin7;		
		UCHAR pd1lden;		
		UCHAR pd2lden;		
		UCHAR dispin;		
		UCHAR disenbm;		
		UCHAR disdisbm;		
		UCHAR ccselect;		
		UCHAR iset1;		
		UCHAR iset2;		
		UCHAR iset3;		
		UCHAR extiset;		
		UCHAR isetpd2;		
		UCHAR iseten;		
		UCHAR PDO1_GPIO[7];		
		UCHAR PDO2_GPIO[7];		
		UCHAR PDO3_GPIO[7];		
		UCHAR PDO4_GPIO[7];		
		UCHAR PDO5_GPIO[7];		
		UCHAR PDO6_GPIO[7];		
		UCHAR PDO7_GPIO[7];		
		UCHAR VSET0V_GPIO[7];	
		UCHAR VSAFE5V_GPIO[7];	
		FT_EEPROM_PD_PDO_mv_ma BM_PDO_Sink;
		FT_EEPROM_PD_PDO_mv_ma BM_PDO_Source;
		FT_EEPROM_PD_PDO_mv_ma BM_PDO_Sink_2; 
		UCHAR srt;			
		UCHAR hrt;			
		UCHAR sct;			
		UCHAR dit;			
		USHORT srcrt;		
		USHORT trt;			
		USHORT sofft;		
		USHORT nrt;			
		USHORT swct;		
		USHORT snkrt;		
		UCHAR dt;			
		UCHAR cnst;			
		USHORT it;			
		UCHAR i2caddr;		
		UINT prou;			
		UINT trim1;			
		UINT trim2;			
		UCHAR extdc;		
	} FT_EEPROM_PD, *PFT_EEPROM_PD;
	typedef struct _ft_eeprom_2233hp
	{
		FT_EEPROM_2232H	ft2232h;
		FT_EEPROM_PD	pd;
	} FT_EEPROM_2233HP, *PFT_EEPROM_2233HP;
	typedef struct _ft_eeprom_4233hp
	{
		FT_EEPROM_4232H	ft4232h;
		FT_EEPROM_PD	pd;
	} FT_EEPROM_4233HP, *PFT_EEPROM_4233HP;
	typedef struct _ft_eeprom_2232hp
	{
		FT_EEPROM_2232H	ft2232h;
		FT_EEPROM_PD	pd;
	} FT_EEPROM_2232HP, *PFT_EEPROM_2232HP;
	typedef struct _ft_eeprom_4232hp
	{
		FT_EEPROM_4232H	ft4232h;
		FT_EEPROM_PD	pd;
	} FT_EEPROM_4232HP, *PFT_EEPROM_4232HP;
	typedef struct _ft_eeprom_233hp
	{
		FT_EEPROM_232H	ft232h;
		FT_EEPROM_PD	pd;
	} FT_EEPROM_233HP, *PFT_EEPROM_233HP;
	typedef struct _ft_eeprom_232hp
	{
		FT_EEPROM_232H	ft232h;
		FT_EEPROM_PD	pd;
	} FT_EEPROM_232HP, *PFT_EEPROM_232HP;
	FTD2XX_API FT_STATUS WINAPI FT_EEPROM_Read(
		FT_HANDLE ftHandle,
		void *eepromData,
		DWORD eepromDataSize,
		char *Manufacturer,
		char *ManufacturerId,
		char *Description,
		char *SerialNumber
		);
	FTD2XX_API FT_STATUS WINAPI FT_EEPROM_Program(
		FT_HANDLE ftHandle,
		void *eepromData,
		DWORD eepromDataSize,
		char *Manufacturer,
		char *ManufacturerId,
		char *Description,
		char *SerialNumber
		);