src/bindings_windows_x86.rs

#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of ft_eeprom_pd"][::std::mem::size_of::<ft_eeprom_pd>() - 220usize];
    ["Alignment of ft_eeprom_pd"][::std::mem::align_of::<ft_eeprom_pd>() - 4usize];
    ["Offset of field: ft_eeprom_pd::srprs"][::std::mem::offset_of!(ft_eeprom_pd, srprs) - 0usize];
    ["Offset of field: ft_eeprom_pd::sraprs"]
        [::std::mem::offset_of!(ft_eeprom_pd, sraprs) - 1usize];
    ["Offset of field: ft_eeprom_pd::srrprs"]
        [::std::mem::offset_of!(ft_eeprom_pd, srrprs) - 2usize];
    ["Offset of field: ft_eeprom_pd::saprs"][::std::mem::offset_of!(ft_eeprom_pd, saprs) - 3usize];
    ["Offset of field: ft_eeprom_pd::vconns"]
        [::std::mem::offset_of!(ft_eeprom_pd, vconns) - 4usize];
    ["Offset of field: ft_eeprom_pd::passthru"]
        [::std::mem::offset_of!(ft_eeprom_pd, passthru) - 5usize];
    ["Offset of field: ft_eeprom_pd::extmcu"]
        [::std::mem::offset_of!(ft_eeprom_pd, extmcu) - 6usize];
    ["Offset of field: ft_eeprom_pd::pd2en"][::std::mem::offset_of!(ft_eeprom_pd, pd2en) - 7usize];
    ["Offset of field: ft_eeprom_pd::pd1autoclk"]
        [::std::mem::offset_of!(ft_eeprom_pd, pd1autoclk) - 8usize];
    ["Offset of field: ft_eeprom_pd::pd2autoclk"]
        [::std::mem::offset_of!(ft_eeprom_pd, pd2autoclk) - 9usize];
    ["Offset of field: ft_eeprom_pd::useefuse"]
        [::std::mem::offset_of!(ft_eeprom_pd, useefuse) - 10usize];
    ["Offset of field: ft_eeprom_pd::extvconn"]
        [::std::mem::offset_of!(ft_eeprom_pd, extvconn) - 11usize];
    ["Offset of field: ft_eeprom_pd::count"][::std::mem::offset_of!(ft_eeprom_pd, count) - 12usize];
    ["Offset of field: ft_eeprom_pd::gpio1"][::std::mem::offset_of!(ft_eeprom_pd, gpio1) - 13usize];
    ["Offset of field: ft_eeprom_pd::gpio2"][::std::mem::offset_of!(ft_eeprom_pd, gpio2) - 14usize];
    ["Offset of field: ft_eeprom_pd::gpio3"][::std::mem::offset_of!(ft_eeprom_pd, gpio3) - 15usize];
    ["Offset of field: ft_eeprom_pd::gpio4"][::std::mem::offset_of!(ft_eeprom_pd, gpio4) - 16usize];
    ["Offset of field: ft_eeprom_pd::gpio5"][::std::mem::offset_of!(ft_eeprom_pd, gpio5) - 17usize];
    ["Offset of field: ft_eeprom_pd::gpio6"][::std::mem::offset_of!(ft_eeprom_pd, gpio6) - 18usize];
    ["Offset of field: ft_eeprom_pd::gpio7"][::std::mem::offset_of!(ft_eeprom_pd, gpio7) - 19usize];
    ["Offset of field: ft_eeprom_pd::pd1lden"]
        [::std::mem::offset_of!(ft_eeprom_pd, pd1lden) - 20usize];
    ["Offset of field: ft_eeprom_pd::pd2lden"]
        [::std::mem::offset_of!(ft_eeprom_pd, pd2lden) - 21usize];
    ["Offset of field: ft_eeprom_pd::dispin"]
        [::std::mem::offset_of!(ft_eeprom_pd, dispin) - 22usize];
    ["Offset of field: ft_eeprom_pd::disenbm"]
        [::std::mem::offset_of!(ft_eeprom_pd, disenbm) - 23usize];
    ["Offset of field: ft_eeprom_pd::disdisbm"]
        [::std::mem::offset_of!(ft_eeprom_pd, disdisbm) - 24usize];
    ["Offset of field: ft_eeprom_pd::ccselect"]
        [::std::mem::offset_of!(ft_eeprom_pd, ccselect) - 25usize];
    ["Offset of field: ft_eeprom_pd::iset1"][::std::mem::offset_of!(ft_eeprom_pd, iset1) - 26usize];
    ["Offset of field: ft_eeprom_pd::iset2"][::std::mem::offset_of!(ft_eeprom_pd, iset2) - 27usize];
    ["Offset of field: ft_eeprom_pd::iset3"][::std::mem::offset_of!(ft_eeprom_pd, iset3) - 28usize];
    ["Offset of field: ft_eeprom_pd::extiset"]
        [::std::mem::offset_of!(ft_eeprom_pd, extiset) - 29usize];
    ["Offset of field: ft_eeprom_pd::isetpd2"]
        [::std::mem::offset_of!(ft_eeprom_pd, isetpd2) - 30usize];
    ["Offset of field: ft_eeprom_pd::iseten"]
        [::std::mem::offset_of!(ft_eeprom_pd, iseten) - 31usize];
    ["Offset of field: ft_eeprom_pd::PDO1_GPIO"]
        [::std::mem::offset_of!(ft_eeprom_pd, PDO1_GPIO) - 32usize];
    ["Offset of field: ft_eeprom_pd::PDO2_GPIO"]
        [::std::mem::offset_of!(ft_eeprom_pd, PDO2_GPIO) - 39usize];
    ["Offset of field: ft_eeprom_pd::PDO3_GPIO"]
        [::std::mem::offset_of!(ft_eeprom_pd, PDO3_GPIO) - 46usize];
    ["Offset of field: ft_eeprom_pd::PDO4_GPIO"]
        [::std::mem::offset_of!(ft_eeprom_pd, PDO4_GPIO) - 53usize];
    ["Offset of field: ft_eeprom_pd::PDO5_GPIO"]
        [::std::mem::offset_of!(ft_eeprom_pd, PDO5_GPIO) - 60usize];
    ["Offset of field: ft_eeprom_pd::PDO6_GPIO"]
        [::std::mem::offset_of!(ft_eeprom_pd, PDO6_GPIO) - 67usize];
    ["Offset of field: ft_eeprom_pd::PDO7_GPIO"]
        [::std::mem::offset_of!(ft_eeprom_pd, PDO7_GPIO) - 74usize];
    ["Offset of field: ft_eeprom_pd::VSET0V_GPIO"]
        [::std::mem::offset_of!(ft_eeprom_pd, VSET0V_GPIO) - 81usize];
    ["Offset of field: ft_eeprom_pd::VSAFE5V_GPIO"]
        [::std::mem::offset_of!(ft_eeprom_pd, VSAFE5V_GPIO) - 88usize];
    ["Offset of field: ft_eeprom_pd::BM_PDO_Sink"]
        [::std::mem::offset_of!(ft_eeprom_pd, BM_PDO_Sink) - 96usize];
    ["Offset of field: ft_eeprom_pd::BM_PDO_Source"]
        [::std::mem::offset_of!(ft_eeprom_pd, BM_PDO_Source) - 124usize];
    ["Offset of field: ft_eeprom_pd::BM_PDO_Sink_2"]
        [::std::mem::offset_of!(ft_eeprom_pd, BM_PDO_Sink_2) - 152usize];
    ["Offset of field: ft_eeprom_pd::srt"][::std::mem::offset_of!(ft_eeprom_pd, srt) - 180usize];
    ["Offset of field: ft_eeprom_pd::hrt"][::std::mem::offset_of!(ft_eeprom_pd, hrt) - 181usize];
    ["Offset of field: ft_eeprom_pd::sct"][::std::mem::offset_of!(ft_eeprom_pd, sct) - 182usize];
    ["Offset of field: ft_eeprom_pd::dit"][::std::mem::offset_of!(ft_eeprom_pd, dit) - 183usize];
    ["Offset of field: ft_eeprom_pd::srcrt"]
        [::std::mem::offset_of!(ft_eeprom_pd, srcrt) - 184usize];
    ["Offset of field: ft_eeprom_pd::trt"][::std::mem::offset_of!(ft_eeprom_pd, trt) - 186usize];
    ["Offset of field: ft_eeprom_pd::sofft"]
        [::std::mem::offset_of!(ft_eeprom_pd, sofft) - 188usize];
    ["Offset of field: ft_eeprom_pd::nrt"][::std::mem::offset_of!(ft_eeprom_pd, nrt) - 190usize];
    ["Offset of field: ft_eeprom_pd::swct"][::std::mem::offset_of!(ft_eeprom_pd, swct) - 192usize];
    ["Offset of field: ft_eeprom_pd::snkrt"]
        [::std::mem::offset_of!(ft_eeprom_pd, snkrt) - 194usize];
    ["Offset of field: ft_eeprom_pd::dt"][::std::mem::offset_of!(ft_eeprom_pd, dt) - 196usize];
    ["Offset of field: ft_eeprom_pd::cnst"][::std::mem::offset_of!(ft_eeprom_pd, cnst) - 197usize];
    ["Offset of field: ft_eeprom_pd::it"][::std::mem::offset_of!(ft_eeprom_pd, it) - 198usize];
    ["Offset of field: ft_eeprom_pd::i2caddr"]
        [::std::mem::offset_of!(ft_eeprom_pd, i2caddr) - 200usize];
    ["Offset of field: ft_eeprom_pd::prou"][::std::mem::offset_of!(ft_eeprom_pd, prou) - 204usize];
    ["Offset of field: ft_eeprom_pd::trim1"]
        [::std::mem::offset_of!(ft_eeprom_pd, trim1) - 208usize];
    ["Offset of field: ft_eeprom_pd::trim2"]
        [::std::mem::offset_of!(ft_eeprom_pd, trim2) - 212usize];
    ["Offset of field: ft_eeprom_pd::extdc"]
        [::std::mem::offset_of!(ft_eeprom_pd, extdc) - 216usize];
};
pub type FT_EEPROM_PD = ft_eeprom_pd;
#[repr(C)]
#[derive(Debug, Default, Copy, Clone)]
pub struct _ft_eeprom_2233hp {
    pub ft2232h: FT_EEPROM_2232H,
    pub pd: FT_EEPROM_PD,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of _ft_eeprom_2233hp"][::std::mem::size_of::<_ft_eeprom_2233hp>() - 260usize];
    ["Alignment of _ft_eeprom_2233hp"][::std::mem::align_of::<_ft_eeprom_2233hp>() - 4usize];
    ["Offset of field: _ft_eeprom_2233hp::ft2232h"]
        [::std::mem::offset_of!(_ft_eeprom_2233hp, ft2232h) - 0usize];
    ["Offset of field: _ft_eeprom_2233hp::pd"]
        [::std::mem::offset_of!(_ft_eeprom_2233hp, pd) - 40usize];
};
pub type FT_EEPROM_2233HP = _ft_eeprom_2233hp;
#[repr(C)]
#[derive(Debug, Default, Copy, Clone)]
pub struct _ft_eeprom_4233hp {
    pub ft4232h: FT_EEPROM_4232H,
    pub pd: FT_EEPROM_PD,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of _ft_eeprom_4233hp"][::std::mem::size_of::<_ft_eeprom_4233hp>() - 256usize];
    ["Alignment of _ft_eeprom_4233hp"][::std::mem::align_of::<_ft_eeprom_4233hp>() - 4usize];
    ["Offset of field: _ft_eeprom_4233hp::ft4232h"]
        [::std::mem::offset_of!(_ft_eeprom_4233hp, ft4232h) - 0usize];
    ["Offset of field: _ft_eeprom_4233hp::pd"]
        [::std::mem::offset_of!(_ft_eeprom_4233hp, pd) - 36usize];
};
pub type FT_EEPROM_4233HP = _ft_eeprom_4233hp;
#[repr(C)]
#[derive(Debug, Default, Copy, Clone)]
pub struct _ft_eeprom_2232hp {
    pub ft2232h: FT_EEPROM_2232H,
    pub pd: FT_EEPROM_PD,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of _ft_eeprom_2232hp"][::std::mem::size_of::<_ft_eeprom_2232hp>() - 260usize];
    ["Alignment of _ft_eeprom_2232hp"][::std::mem::align_of::<_ft_eeprom_2232hp>() - 4usize];
    ["Offset of field: _ft_eeprom_2232hp::ft2232h"]
        [::std::mem::offset_of!(_ft_eeprom_2232hp, ft2232h) - 0usize];
    ["Offset of field: _ft_eeprom_2232hp::pd"]
        [::std::mem::offset_of!(_ft_eeprom_2232hp, pd) - 40usize];
};
pub type FT_EEPROM_2232HP = _ft_eeprom_2232hp;
#[repr(C)]
#[derive(Debug, Default, Copy, Clone)]
pub struct _ft_eeprom_4232hp {
    pub ft4232h: FT_EEPROM_4232H,
    pub pd: FT_EEPROM_PD,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of _ft_eeprom_4232hp"][::std::mem::size_of::<_ft_eeprom_4232hp>() - 256usize];
    ["Alignment of _ft_eeprom_4232hp"][::std::mem::align_of::<_ft_eeprom_4232hp>() - 4usize];
    ["Offset of field: _ft_eeprom_4232hp::ft4232h"]
        [::std::mem::offset_of!(_ft_eeprom_4232hp, ft4232h) - 0usize];
    ["Offset of field: _ft_eeprom_4232hp::pd"]
        [::std::mem::offset_of!(_ft_eeprom_4232hp, pd) - 36usize];
};
pub type FT_EEPROM_4232HP = _ft_eeprom_4232hp;
#[repr(C)]
#[derive(Debug, Default, Copy, Clone)]
pub struct _ft_eeprom_233hp {
    pub ft232h: FT_EEPROM_232H,
    pub pd: FT_EEPROM_PD,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of _ft_eeprom_233hp"][::std::mem::size_of::<_ft_eeprom_233hp>() - 264usize];
    ["Alignment of _ft_eeprom_233hp"][::std::mem::align_of::<_ft_eeprom_233hp>() - 4usize];
    ["Offset of field: _ft_eeprom_233hp::ft232h"]
        [::std::mem::offset_of!(_ft_eeprom_233hp, ft232h) - 0usize];
    ["Offset of field: _ft_eeprom_233hp::pd"]
        [::std::mem::offset_of!(_ft_eeprom_233hp, pd) - 44usize];
};
pub type FT_EEPROM_233HP = _ft_eeprom_233hp;
#[repr(C)]
#[derive(Debug, Default, Copy, Clone)]
pub struct _ft_eeprom_232hp {
    pub ft232h: FT_EEPROM_232H,
    pub pd: FT_EEPROM_PD,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of _ft_eeprom_232hp"][::std::mem::size_of::<_ft_eeprom_232hp>() - 264usize];
    ["Alignment of _ft_eeprom_232hp"][::std::mem::align_of::<_ft_eeprom_232hp>() - 4usize];
    ["Offset of field: _ft_eeprom_232hp::ft232h"]
        [::std::mem::offset_of!(_ft_eeprom_232hp, ft232h) - 0usize];
    ["Offset of field: _ft_eeprom_232hp::pd"]
        [::std::mem::offset_of!(_ft_eeprom_232hp, pd) - 44usize];
};
pub type FT_EEPROM_232HP = _ft_eeprom_232hp;
unsafe extern "stdcall" {
    pub fn FT_EEPROM_Read(
        ftHandle: FT_HANDLE,
        eepromData: *mut ::std::os::raw::c_void,
        eepromDataSize: DWORD,
        Manufacturer: *mut ::std::os::raw::c_char,
        ManufacturerId: *mut ::std::os::raw::c_char,
        Description: *mut ::std::os::raw::c_char,
        SerialNumber: *mut ::std::os::raw::c_char,
    ) -> FT_STATUS;
}
unsafe extern "stdcall" {
    pub fn FT_EEPROM_Program(
        ftHandle: FT_HANDLE,
        eepromData: *mut ::std::os::raw::c_void,
        eepromDataSize: DWORD,
        Manufacturer: *mut ::std::os::raw::c_char,
        ManufacturerId: *mut ::std::os::raw::c_char,
        Description: *mut ::std::os::raw::c_char,
        SerialNumber: *mut ::std::os::raw::c_char,
    ) -> FT_STATUS;
}
